# Sayhi

./: .gitignore  README.md  pyproject.toml
src/sayhi/: __init__.py  __main__.py  backend.py
