[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sayhi"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = ["howto@git+https://github.com/Dnash007/howto"]

[project.scripts]
sayhi = "sayhi.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
